fix chat feed input moving out of view

--- a/gui/scss/core/_chat.scss
+++ b/gui/scss/core/_chat.scss
@@ -671,6 +671,7 @@
     display: flex;
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 
